# life-os-2026

./: .cache  .env.example  .gitignore  .spotify_token_cache  CHECKPOINT.md  DRAFT_kglw_api_get_logging_fix.py  DRAFT_kglw_api_get_logging_fix_v2.py  DRAFT_kglw_links_endpoint.py  DRAFT_kglw_youtube_matches_endpoint.py  MIGRATION.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt  run_pipelines.py  validate_signals_1.py  validate_signals_recruiting.py
.github/: dependabot.yml
.streamlit/: config.toml
api/: deps.py  main.py
app/: Home.py  config.toml  ons_theme.py  streamlit_app.py
dbt/: dbt_project.yml
docs/: SYSTEM_DEEP_DIVE.md  SYSTEM_EXPLAINER.md
goals/: 2026.yaml
launchd/: com.ons.backup-duckdb.plist  com.ons.daily-sync.plist
notebooks/: 01_line_accuracy_overview.ipynb  02_extended_factors.ipynb
openclaw/: audit.py  config.py  db.py  orchestrator.py
pipelines/: __init__.py  cfbd_extended_pipeline.py  cfbd_pipeline.py  habits_pipeline.py  hardcover_pipeline.py  kglw_pipeline.py.bak  kglw_pipeline.py.orig  kglw_youtube_pipeline.py  letterboxd_pipeline.py  live_picks_pipeline.py  strava_pipeline.py
scripts/: aeg_events_fetch.py  aeg_events_inspect.py  backtest_ablation.py  backtest_full_model.py  backtest_walk_forward.py  backup_duckdb.py  calendar_export.py  calendar_metrics.py  cfb_backtest.py  cfb_build_team_profiles.py  cfb_edge_validation.py  cfb_quality_phase_d.py  cfb_quality_validation.py  cfb_team_analysis.py  create_goal_progress_template.py  daily_sync.py  download_cfb_logos.py  download_nhl_mls_logos.py  download_pro_logos.py  (+52 more)
(+111 files in other folders)
