[project]
name = "ons-2026"
version = "0.1.0"
requires-python = ">=3.12,<3.15"
dependencies = [
    "dbt-core>=1.11.8",
    "dbt-duckdb>=1.10.1",
    "dlt[duckdb]>=1.4.0",
    "duckdb>=1.5.2",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.0",
    "spotipy>=2.26.0",
    "streamlit>=1.57.0",
]
